# RayTracingPyQt5

./: CMakeLists.txt  Makefile
include/: geometries.hpp  helperFunctions.hpp  render.hpp  scene.hpp
src/: firstWindow.py  geometries.cpp  helperFunctions.cpp  main.cpp  pyModuleRenderer.cpp  render.cpp
